--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="utf-8" />
 </head>
 <body>
 
@@ -28,6 +29,3 @@ Les fichiers InCell:<INPUT name="file2[]" type="file" multiple /><br><br>
 
 </body>
 </html>
-
-
-
