--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 <meta charset="utf-8" />
+<link rel="stylesheet" type="text/css" href="style_Apteeus.css">
 </head>
 <body>
-
+<div></div>
 <form action="parseur.php" method="post" enctype="multipart/form-data">
 <h2>L'expérience</h2>
 
