--- a/index.html
+++ b/index.html
@@ -5,28 +5,12 @@
 </head>
 <body>
 <div></div>
-<form action="parseur.php" method="post" enctype="multipart/form-data">
-<h2>L'expérience</h2>
+<br><br> <br> 
+<iframe width="100%" height="450px" src="experience.php" name="iframe_a"></iframe> 
+<h2><pre>
+<a href="experience.php" target="iframe_a">Ajouter une expérience</a>			<a href="upload.php" target="iframe_a">Uploader des fichiers</a>			<a href="Extraction/index.php" target="iframe_a"> Extraction des fichiers au format.xlsx</a> </h2>
+</pre>
 
-<h4>Le type</h4>
-<input type="radio" name="type_exp" value="Screening">Screening<br>
-<input type="radio" name="type_exp" value="DRC-Hit">DRC-Hit   <br>
-<h4>L'indentifiant de la cellule</h4>
-<input type="text" name="cellule">
-<h4>La température (°C)</h4>
-<input type="text" name="température">
-<h4>Le temps d'incubations en s</h4>	
-<input type="text" name="temps_incubation"><br>
- 
-<h2>Sélectionner les fichiers:</h2>
-Les fichiers Xevo:<INPUT name="file[]" type="file" multiple /><br><br>
-Les fichiers InCell:<INPUT name="file2[]" type="file" multiple /><br><br>
-<INPUT type="submit" name= "valider" value="Upload">
-
-</form>
-
-<br>
-<a href="Extraction/index.php">Cliquez ici pour extraire au format.xlsx</a>
 
 </body>
 </html>
